@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2018/07/28 14:40:46 brook Exp $
+# $NetBSD: Makefile,v 1.10 2019/07/31 18:48:28 brook Exp $
 
-CATEGORIES=	math
+CATEGORIES=	math R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/XML/
@@ -8,7 +8,9 @@ COMMENT=	Tools for parsing and generating XML within R
 LICENSE=	2-clause-bsd
 
 R_PKGNAME=	XML
-R_PKGVER=	3.98-1.9
+R_PKGVER=	3.98-1.20
+
+USE_LANGUAGES=	c
 
 .include "../../math/R/Makefile.extension"
 .include "../../textproc/libxml2/buildlink3.mk"
