@@ -1,12 +1,11 @@
-# $NetBSD: buildlink3.mk,v 1.1 2011/06/14 21:30:08 alnsn Exp $
+# $NetBSD: buildlink3.mk,v 1.2 2019/07/31 18:48:28 brook Exp $
 
 BUILDLINK_TREE+=	RXML
 
 .if !defined(RXML_BUILDLINK3_MK)
 RXML_BUILDLINK3_MK:=
 
-BUILDLINK_API_DEPENDS.RXML+=	R-XML>=3.4.0
-BUILDLINK_ABI_DEPENDS.RXML+=	R-XML>=3.4.0
+BUILDLINK_API_DEPENDS.RXML+=	R-XML>=3.98.1.20
 BUILDLINK_PKGSRCDIR.RXML?=	../../math/R-XML
 .endif # RXML_BUILDLINK3_MK
 
