@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.8 2018/02/09 00:19:24 minskim Exp $
+$NetBSD: distinfo,v 1.9 2019/07/31 18:48:28 brook Exp $
 
-SHA1 (R/XML_3.98-1.9.tar.gz) = 830d507ad565cd681d4f48a7bbe2dc86ed3a19bd
-RMD160 (R/XML_3.98-1.9.tar.gz) = 3ebdabaeaf827bded9db214af9298687e26a3294
-SHA512 (R/XML_3.98-1.9.tar.gz) = 7b8c658a14555492c415f74d2381dac348e838f0ef4b669f0e0c0ce529d27e3101b3c21a1163f4e6a78f19db026edfdfb1ddd116670cc8d0f95bb8f87ab8a501
-Size (R/XML_3.98-1.9.tar.gz) = 1599437 bytes
+SHA1 (R/XML_3.98-1.20.tar.gz) = dd768ba93b2f6a618ec3154d2a52498be16cc754
+RMD160 (R/XML_3.98-1.20.tar.gz) = fd90fbfc499c73b515d00399b7170ca3465ad7a0
+SHA512 (R/XML_3.98-1.20.tar.gz) = 85e3fc6a328f4ec681590c5809ca8d4ce8837298fab850f11063f92b7b0655182c03d721554f9cd05dae406e1873b21be983365843315199d0db133c6bc1bfe9
+Size (R/XML_3.98-1.20.tar.gz) = 1600829 bytes
